kube-manifests/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
        - name: haproxy
          image: haproxy:2.4
          volumeMounts:
            - name: haproxy-config-volume
              mountPath: /usr/local/etc/haproxy
          ports:
            - containerPort: 80
      volumes:
        - name: haproxy-config-volume
          configMap:
            name: haproxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
  namespace: voting-app
spec:
  selector:
    app: haproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
