kube-manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: voting-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None  # Required for stable network ID
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: voting-app
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "db"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
