kube-manifests/voting-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app
  namespace: voting-app
spec:
  selector:
    app: voting-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9321
      targetPort: 9321
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
  namespace: voting-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9321"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: voting-app
          image: voting-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 9321
