kube-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: voting.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: haproxy-service
                port:
                  number: 80
    - host: pgadmin.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
